--- a/uploadprep.html
+++ b/uploadprep.html
@@ -1,1 +1,167 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Select Category</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f9f9f9;
+      color: #333;
+    }
 
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      background-color: #ccc;
+      padding: 15px 30px;
+      margin-bottom: 30px;
+    }
+
+    .navbar .logo {
+      font-size: 24px;
+      font-weight: bold;
+    }
+
+    .navbar .nav-buttons button {
+      margin: 0 5px;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .navbar .nav-buttons .back {
+      background-color: #81c995;
+    }
+
+    
+    .container {
+      display: flex;
+      flex-direction: row;
+      max-width: 1200px;
+      margin: 90px auto;
+      padding: 70px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .category-list {
+      flex: 1;
+      border-right: 1px solid #ddd;
+      padding-right: 20px;
+    }
+
+    .category-list h2 {
+      margin-bottom: 20px;
+    }
+
+    .category-list button {
+      display: block;
+      width: 100%;
+      padding: 15px;
+      margin-bottom: 30px;
+      border: none;
+      border-radius: 100px;
+      background-color: #4fc3f7;
+      color: #ffffff;
+      cursor: pointer;
+      text-align: left;
+    }
+
+    .category-list button:hover {
+      background-color: #0288d1;
+    }
+
+    .subcategory-list {
+      flex: 2;
+      padding-left: 20px;
+    }
+
+    .subcategory-list h2 {
+      margin-bottom: 20px;
+    }
+
+    .subcategory-list button {
+      display: inline-block;
+      padding: 50px 70px;
+      margin: 25px;
+      border: 5px solid #ddd;
+      border-radius: 100px;
+      background-color: #fff;
+      cursor: pointer;
+    }
+
+    .subcategory-list button:hover {
+      background-color: #a79797;
+    }
+
+    .subcategory-list button.active {
+      background-color: #4fc3f7;
+      color: #fff;
+      border-color: #0288d1;
+    }
+  </style>
+</head>
+<body>
+    <!-- Navigation Bar -->
+    <div class="navbar">
+      <div class="logo">李</div>
+      <div class="nav-buttons">
+        <button class="back" onclick="window.location.href='index.html'">Back to Home</button>
+      </div>
+    </div>
+
+    <!-- Container -->
+    <div class="container">
+      <!-- Category List -->
+      <div class="category-list">
+        <h2>Select a Category</h2>
+        <button onclick="selectCategory('Free Items')">Free Items</button>
+        <button onclick="selectCategory('Vehicles')">Vehicles</button>
+        <button onclick="selectCategory('Properties')">Properties</button>
+        <button onclick="selectCategory('Jobs')">Jobs</button>
+        <button onclick="selectCategory('Electronics')">Electronics</button>
+      </div>
+
+      <!-- Subcategory List -->
+      <div class="subcategory-list">
+        <h2>Select a Subcategory</h2>
+        <div id="subcategoryButtons">
+          <!-- Subcategory buttons will be dynamically added here -->
+        </div>
+      </div>
+    </div>
+
+    <script>
+      const subcategories = {
+        'Free Items': ['Furniture', 'Clothing', 'Books'],
+        'Vehicles': ['Cars', 'Motorcycles', 'Bicycles'],
+        'Properties': ['Houses', 'Apartments', 'Land'],
+        'Jobs': ['Full-time', 'Part-time', 'Freelance'],
+        'Electronics': ['Phones', 'Laptops', 'Cameras']
+      };
+
+      function selectCategory(category) {
+        const subcategoryButtons = document.getElementById('subcategoryButtons');
+        subcategoryButtons.innerHTML = '';
+
+        if (subcategories[category]) {
+          subcategories[category].forEach(subcategory => {
+            const button = document.createElement('button');
+            button.textContent = subcategory;
+            button.onclick = () => {
+              window.location.href = `upload.html?category=${category}&subcategory=${subcategory}`;
+            };
+            subcategoryButtons.appendChild(button);
+          });
+        }
+      }
+    </script>
+</body>
+</html>
