--- a/index.html
+++ b/index.html
@@ -186,11 +186,6 @@
       cursor: pointer;
     }
 
-
-   
-
-  
-    
     .close-overlay {
       margin-top: 20px;
       padding: 10px 20px;
@@ -264,7 +259,15 @@
       <button class="login" onclick="window.location.href='login.html'">Logout</button>
       <button class="upload" onclick="window.location.href='uploadprep.html'">Upload Post</button>
       <button class="register" onclick="window.location.href='member.html'">Member Registration</button>
-      <button class="font-size-toggle" onclick="toggleFontSize()">Toggle Font Size</button>
+      <div class="font-size-dropdown" style="position: relative;">
+        <button class="font-size-toggle" onclick="toggleFontDropdown()">Font Size ▼</button>
+        <div id="fontSizeDropdown" style="display: none; position: absolute; right: 0; background: #5f5f5f; border: 1px solid #ccc; border-radius: 5px; z-index: 100; min-width: 120px;">
+          <option style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" onclick="changeFontSize('14px')">Small</option>
+          <option style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" onclick="changeFontSize('16px')">Medium</option>
+          <option style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" onclick="changeFontSize('18px')">Large</option>
+          <option style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" onclick="changeFontSize('20px')">Extra Large</option>
+        </div>
+      </div>
     </div>
   </div>
 
@@ -281,14 +284,14 @@
       <div>
         <h4>Category</h4>
         <ul>
-          <li><input type="checkbox" id="category1"> Handphone & Tablet</li>
-          <li><input type="checkbox" id="category2"> Accessories</li>
-          <li><input type="checkbox" id="category3"> Automotive</li>
+          <li><input type="checkbox" class="category-checkbox" value="Fast Food"> Fast Food</li>
+          <li><input type="checkbox" class="category-checkbox" value="Nearby"> Nearby</li>
+          <li><input type="checkbox" class="category-checkbox" value="Authentic"> Authentic</li>
         </ul>
       </div>
       <div>
         <h4>Location</h4>
-        <select onchange="filterByLocation(this.value)">
+        <select id="locationSelect">
           <option value="all">All Locations</option>
           <option value="japan">Japan</option>
           <option value="china">China</option>
@@ -310,12 +313,13 @@
           <input type="text" placeholder="Maximum Price" id="maxPrice" style="width: 100px;">
         </div>
       </div>
+      <button id="applyFiltersBtn" style="margin-top: 20px; padding: 10px 20px; background: #4fc3f7; color: #fff; border: none; border-radius: 5px; cursor: pointer;">Apply Filters</button>
     </div>
 
     <!-- Image Grid -->
     <div class="image-container">
       <!-- Updated image cards with new design -->
-      <div class="image-card" onclick="window.location.href='item.html?image=1'">
+      <div class="image-card" data-category="authentic" onclick="window.location.href='item.html?image=1'">
         <img src="imgs/sushi.png" alt="Sushi">
         <div class="details">
           <h3>Sushi</h3>
@@ -323,7 +327,7 @@
           <p class="price">$15</p>
         </div>
       </div>
-      <div class="image-card" onclick="window.location.href='item.html?image=2'">
+      <div class="image-card" data-category="authentic" onclick="window.location.href='item.html?image=2'">
         <img src="imgs/dimsum.png" alt="Dim Sum">
         <div class="details">
           <h3>Dim Sum</h3>
@@ -331,7 +335,7 @@
           <p class="price">$20</p>
         </div>
       </div>
-      <div class="image-card" onclick="window.location.href='item.html?image=3'">
+      <div class="image-card" data-category="authentic" onclick="window.location.href='item.html?image=3'">
         <img src="imgs/ramen.png" alt="Ramen">
         <div class="details">
           <h3>Ramen</h3>
@@ -339,12 +343,141 @@
           <p class="price">$12</p>
         </div>
       </div>
-      <div class="image-card" onclick="window.location.href='item.html?image=4'">
+      <div class="image-card" data-category="authentic" onclick="window.location.href='item.html?image=4'">
         <img src="imgs/pad thai.png" alt="Pad Thai">
         <div class="details">
           <h3>Pad Thai</h3>
           <p>Thai stir-fried noodles</p>
           <p class="price">$10</p>
+        </div>
+      </div>
+      <div class="image-card" data-location="korea" data-category="authentic" onclick="window.location.href='item.html?image=5'">
+        <img src="imgs/bibimbap.png" alt="Bibimbap">
+        <div class="details">
+          <h3>Bibimbap</h3>
+          <p>Mixed rice with vegetables and meat.</p>
+          <div class="price">$9</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="indonesia" data-category="fast food" onclick="window.location.href='item.html?image=6'">
+        <img src="imgs/satay.png" alt="Satay">
+        <div class="details">
+          <h3>Satay</h3>
+          <p>Grilled meat skewers with peanut sauce.</p>
+          <div class="price">$10</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="vietnam" data-category="authentic" onclick="window.location.href='item.html?image=7'">
+        <img src="imgs/pho.png" alt="Pho">
+        <div class="details">
+          <h3>Pho</h3>
+          <p>Vietnamese noodle soup with herbs and meat.</p>
+          <div class="price">$7</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="japan" data-category="fast food" onclick="window.location.href='item.html?image=8'">
+        <img src="imgs/tempura.png" alt="Tempura">
+        <div class="details">
+          <h3>Tempura</h3>
+          <p>Battered and deep-fried seafood and vegetables.</p>
+          <div class="price">$13</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="korea" data-category="fast food" onclick="window.location.href='item.html?image=9'">
+        <img src="imgs/kimbap.png" alt="Kimbap">
+        <div class="details">
+          <h3>Kimbap</h3>
+          <p>Korean rice rolls with vegetables and meat.</p>
+          <div class="price">$8</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="korea" data-category="nearby" onclick="window.location.href='item.html?image=10'">
+        <img src="imgs/tteokbokki.png" alt="Tteokbokki">
+        <div class="details">
+          <h3>Tteokbokki</h3>
+          <p>Spicy Korean rice cakes with fish cakes.</p>
+          <div class="price">$9</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="vietnam" data-category="fast food" onclick="window.location.href='item.html?image=11'">
+        <img src="imgs/spring-rolls.png" alt="Spring Rolls">
+        <div class="details">
+          <h3>Spring Rolls</h3>
+          <p>Crispy rolls with shrimp and vegetables.</p>
+          <div class="price">$6</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="india" data-category="nearby" onclick="window.location.href='item.html?image=12'">
+        <img src="imgs/naan.png" alt="Naan">
+        <div class="details">
+          <h3>Naan</h3>
+          <p>Soft and fluffy Indian bread.</p>
+          <div class="price">$4</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="india" data-category="authentic" onclick="window.location.href='item.html?image=13'">
+        <img src="imgs/biryani.png" alt="Biryani">
+        <div class="details">
+          <h3>Biryani</h3>
+          <p>Fragrant rice dish with meat and spices.</p>
+          <div class="price">$15</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="japan" data-category="nearby" onclick="window.location.href='item.html?image=14'">
+        <img src="imgs/miso-soup.png" alt="Miso Soup">
+        <div class="details">
+          <h3>Miso Soup</h3>
+          <p>Traditional Japanese soup with tofu and seaweed.</p>
+          <div class="price">$5</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="thailand" data-category="authentic" onclick="window.location.href='item.html?image=15'">
+        <img src="imgs/green-curry.png" alt="Green Curry">
+        <div class="details">
+          <h3>Green Curry</h3>
+          <p>Spicy Thai curry with coconut milk and vegetables.</p>
+          <div class="price">$14</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="china" data-category="authentic" onclick="window.location.href='item.html?image=16'">
+        <img src="imgs/baozi.png" alt="Baozi">
+        <div class="details">
+          <h3>Baozi</h3>
+          <p>Chinese steamed buns with various fillings.</p>
+          <div class="price">$7</div>
+        </div>
+      </div>
+      <!-- Extra cards for 5 rows -->
+      <div class="image-card" data-location="china" data-category="fast food" onclick="window.location.href='item.html?image=17'">
+        <img src="imgs/baozi.png" alt="Baozi (Chicken)">
+        <div class="details">
+          <h3>Baozi (Chicken)</h3>
+          <p>Steamed Chinese buns with chicken filling.</p>
+          <div class="price">$8</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="japan" data-category="fast food" onclick="window.location.href='item.html?image=18'">
+        <img src="imgs/sushi.png" alt="Sushi (Salmon)">
+        <div class="details">
+          <h3>Sushi (Salmon)</h3>
+          <p>Salmon sushi with fresh wasabi.</p>
+          <div class="price">$18</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="thailand" data-category="nearby" onclick="window.location.href='item.html?image=19'">
+        <img src="imgs/green-curry.png" alt="Green Curry (Spicy)">
+        <div class="details">
+          <h3>Green Curry (Spicy)</h3>
+          <p>Extra spicy Thai green curry with coconut milk.</p>
+          <div class="price">$16</div>
+        </div>
+      </div>
+      <div class="image-card" data-location="india" data-category="fast food" onclick="window.location.href='item.html?image=20'">
+        <img src="imgs/biryani.png" alt="Biryani (Lamb)">
+        <div class="details">
+          <h3>Biryani (Lamb)</h3>
+          <p>Fragrant lamb biryani with spices.</p>
+          <div class="price">$20</div>
         </div>
       </div>
       <div class="image-card" data-location="korea">
@@ -482,7 +615,8 @@
       const foodCards = document.querySelectorAll('.image-card');
 
       foodCards.forEach(card => {
-        const foodName = card.querySelector('.description').innerText.toLowerCase();
+        // Get the food name from the <h3> tag inside .details
+        const foodName = card.querySelector('.details h3').innerText.toLowerCase();
         if (foodName.includes(searchInput)) {
           card.style.display = 'block';
         } else {
@@ -521,11 +655,33 @@
       });
     }
 
-    // Attach event listeners to price input fields
-    document.getElementById('minPrice').addEventListener('input', filterByPrice);
-    document.getElementById('maxPrice').addEventListener('input', filterByPrice);
+    // Apply Filters Button Logic
+    document.getElementById('applyFiltersBtn').addEventListener('click', function() {
+      const selectedCategories = Array.from(document.querySelectorAll('.category-checkbox:checked')).map(cb => cb.value.toLowerCase());
+      const selectedLocation = document.getElementById('locationSelect').value;
+      const minPrice = parseFloat(document.getElementById('minPrice').value.replace('.', '').replace(',', '.'));
+      const maxPrice = parseFloat(document.getElementById('maxPrice').value.replace('.', '').replace(',', '.'));
+      const foodCards = document.querySelectorAll('.image-card');
 
-    
+      foodCards.forEach(card => {
+        // Category filter
+        let cardCategory = card.getAttribute('data-category');
+        let categoryMatch = selectedCategories.length === 0 || (cardCategory && selectedCategories.includes(cardCategory));
+        // Location filter
+        const foodLocation = card.getAttribute('data-location');
+        let locationMatch = (selectedLocation === 'all' || foodLocation === selectedLocation);
+        // Price filter
+        const priceElement = card.querySelector('.price');
+        const price = parseFloat(priceElement.innerText.replace('$', '').replace('.', '').replace(',', '.'));
+        let priceMatch = (isNaN(minPrice) || price >= minPrice) && (isNaN(maxPrice) || price <= maxPrice);
+
+        if (categoryMatch && locationMatch && priceMatch) {
+          card.style.display = 'block';
+        } else {
+          card.style.display = 'none';
+        }
+      });
+    });
 
     function openHiddenBar() {
       document.getElementById("hiddenBar").style.width = "250px";
@@ -544,13 +700,26 @@
 
     function changeFontSize(size) {
       document.body.style.fontSize = size;
+      // Change the font size of the food card descriptions as well
+      document.querySelectorAll('.image-card .details p').forEach(function(desc) {
+        desc.style.fontSize = size;
+      });
+      document.getElementById('fontSizeDropdown').style.display = 'none';
     }
 
-    function toggleFontSize() {
-      const currentSize = window.getComputedStyle(document.body).fontSize;
-      const newSize = (currentSize === '16px' || currentSize === '') ? '18px' : '16px';
-      document.body.style.fontSize = newSize;
+    function toggleFontDropdown() {
+      const dropdown = document.getElementById('fontSizeDropdown');
+      dropdown.style.display = dropdown.style.display === 'block' ? 'none' : 'block';
     }
+
+    // Hide dropdown when clicking outside
+    document.addEventListener('click', function(event) {
+      const dropdown = document.getElementById('fontSizeDropdown');
+      const button = document.querySelector('.font-size-toggle');
+      if (dropdown && button && !dropdown.contains(event.target) && !button.contains(event.target)) {
+        dropdown.style.display = 'none';
+      }
+    });
   </script>
 </body>
 </html>
