--- a/item.html
+++ b/item.html
@@ -16,22 +16,31 @@
     /* Navigation Bar */
     .navbar {
       display: flex;
-      justify-content: space-between;
       align-items: center;
       background-color: #ccc;
       padding: 15px 30px;
-      margin-bottom: 190px; /* Add spacing below the navigation bar */
+      margin-bottom: 40px;
     }
     .navbar .logo {
+      flex: 0 0 auto;
       font-size: 24px;
       font-weight: bold;
+      margin-right: 40px;
+    }
+    .navbar .nav-buttons {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      gap: 10px;
     }
     .navbar .nav-buttons button {
-      margin: 0 5px;
-      padding: 10px 20px;
+      padding: 10px 18px;
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      font-size: 16px;
+      margin: 0;
     }
     .navbar .nav-buttons .back {
       background-color: #81c995;
@@ -39,7 +48,6 @@
     .navbar .nav-buttons .upload {
       background-color: #4fc3f7;
       color: #fff;
-      margin-left: 10px;
     }
     .navbar .nav-buttons .upload:hover {
       background-color: #0288d1;
@@ -47,10 +55,12 @@
     .navbar .nav-buttons .register {
       background-color: #f28b82;
       color: #fff;
-      margin-left: 10px;
     }
     .navbar .nav-buttons .register:hover {
       background-color: #e57373;
+    }
+    .navbar .font-size-dropdown {
+      margin-left: 10px;
     }
 
     /* Item Details Section */
@@ -154,6 +164,43 @@
       <button class="back" onclick="window.location.href='index.html'">Back to Home</button>
       <button class="upload" onclick="window.location.href='upload.html'">Upload Post</button>
       <button class="register" onclick="window.location.href='register.html'">Member Registration</button>
+      <div class="font-size-dropdown" style="position: relative;">
+        <button class="font-size-toggle" id="fontSizeToggleBtn">Font Size ▼</button>
+        <div id="fontSizeDropdown" style="display: none; position: absolute; right: 0; background: #5f5f5f; border: 1px solid #ccc; border-radius: 5px; z-index: 100; min-width: 120px;">
+          <button style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" data-size="14px">Small</button>
+          <button style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" data-size="16px">Medium</button>
+          <button style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" data-size="18px">Large</button>
+          <button style="width: 100%; background: none; color: #fff; border: none; padding: 10px; text-align: left; cursor: pointer;" data-size="20px">Extra Large</button>
+        </div>
+      </div>
+    <script>
+      // Font size dropdown logic
+      document.addEventListener('DOMContentLoaded', function() {
+        const fontSizeToggleBtn = document.getElementById('fontSizeToggleBtn');
+        const fontSizeDropdown = document.getElementById('fontSizeDropdown');
+        if (fontSizeToggleBtn && fontSizeDropdown) {
+          fontSizeToggleBtn.addEventListener('click', function(e) {
+            e.stopPropagation();
+            fontSizeDropdown.style.display = fontSizeDropdown.style.display === 'block' ? 'none' : 'block';
+          });
+          fontSizeDropdown.querySelectorAll('button[data-size]').forEach(function(btn) {
+            btn.addEventListener('click', function() {
+              const size = btn.getAttribute('data-size');
+              document.body.style.fontSize = size;
+              document.querySelectorAll('.item-details p, .item-details h2, .item-details h3').forEach(function(el) {
+                el.style.fontSize = size;
+              });
+              fontSizeDropdown.style.display = 'none';
+            });
+          });
+          document.addEventListener('click', function(event) {
+            if (!fontSizeDropdown.contains(event.target) && event.target !== fontSizeToggleBtn) {
+              fontSizeDropdown.style.display = 'none';
+            }
+          });
+        }
+      });
+    </script>
     </div>
   </div>
 
